RTL improved. Switched back from css gradients to background image (SmallGradient.png - used for almost all gradients). Some small spacing fixes.

--- a/var/httpd/htdocs/skins/Customer/default/OTRS.Control.css
+++ b/var/httpd/htdocs/skins/Customer/default/OTRS.Control.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Customer Frontend
- * @version     $Revision: 1.3 $
+ * @version     $Revision: 1.4 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -19,7 +19,7 @@
     width: 100%;
     position: relative;
     border-top: 1px solid #EEE;
-    border-bottom: 1px solid #969999;
+    border-bottom: 1px solid #979999;
 }
 
 #Navigation ul {
@@ -46,7 +46,7 @@
 
 .RTL #Navigation li {
     float: right;
-    margin: 0 -2px 0 0;
+    margin: -1px -2px 0 0;
 }
 
 #Navigation a {
@@ -103,7 +103,6 @@
 .RTL #Navigation .Selected a,
 .RTL #Navigation .Selected a:active {
     padding: 6px 11px 4px 10px;
-    background-position: left;
 }
 
 #Navigation .Selected a:active {
@@ -119,9 +118,7 @@
 .MessageBox,
 .ActionRow {
     font-size: 11px;
-    background: #DBDDDD;
-    background: -moz-linear-gradient(top, #DBDDDD, #CCC);
-    background: -webkit-gradient(linear, left top, left bottom, from(#DBDDDD), to(#CCC));
+    background: #A7AAAA url("img/GradientSmall.png") repeat-x 0 0;
     border-top: 1px solid #F0F2F2;
     border-bottom: 1px solid #B8BBBB;
     overflow: hidden;
@@ -129,8 +126,9 @@
 }
 
 .MessageBox p {
-    margin: 5px 7px 4px;
+    margin: 5px 7px;
     padding: 1px 0 1px 20px;
+    background-position: left;
 }
 
 .RTL .MessageBox p {
@@ -143,18 +141,16 @@
 }
 
 .MessageBox.Notice p {
-    background: url(img/accept.png) no-repeat center left;
+    background: url(img/accept.png) no-repeat;
 }
 
 .MessageBox.Error p {
-    background: url(img/decline.png) no-repeat center left;
+    background: url(img/decline.png) no-repeat;
 }
 
 .ActionRow.Bottom {
-    padding: 5px 7px 4px;
-    background: #DBDDDD;
-    background: -moz-linear-gradient(top, #EAEEEE, #DBDDDD);
-    background: -webkit-gradient(linear, left top, left bottom, from(#EAEEEE), to(#DBDDDD));
+    padding: 5px 9px;
+    background: #A7AAAA url("img/GradientSmall.png") repeat-x 0 0;
     border: 1px solid #B8BBBB;
     border-radius: 3px;
     -moz-border-radius: 3px;
@@ -163,6 +159,7 @@
 
 .TicketView .ActionRow.Bottom,
 .RTL .TicketView .ActionRow.Bottom {
+    padding: 0;
     border-radius: 0;
     -moz-border-radius: 0;
     -webkit-border-radius: 0;
@@ -171,7 +168,7 @@
 }
 
 .ActionRow.Bottom > span {
-    padding-left: 5px;
+    padding: 0 5px;
 }
 
 .RTL .ActionRow.Bottom > span {
@@ -184,7 +181,7 @@
 }
 
 .Filter a {
-    padding: 6px 9px 4px;
+    padding: 5px 9px;
     background: url(img/actionrow_divider.png) no-repeat right 7px;
     text-shadow: 0 1px 0 #ECF0F0;
     display: block;
@@ -195,7 +192,7 @@
 }
 
 .Tabs {
-    padding: 6px 9px 4px;
+    padding: 5px 9px;
     float: left;
 }
 
@@ -248,10 +245,12 @@
 }
 
 .Sortable .ActionRow {
+    padding-bottom: 8px;
     border-bottom: none;
 }
 
 .Sortable .ActionRow.Bottom {
+    padding-bottom: 0;
     border-bottom: 1px solid #B8BBBB;
 }
 
